<resources>
    <string name="app_name">Proje</string>
    <string name="hos_geldiniz">Hoşgeldiniz</string>
    <string name="giris_yap">Giriş Yap</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="sifre">Şifre</string>
    <string name="e_mail">E mail</string>
    <string name="giriss_yap">Giriş Yap</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="isim">İsim</string>
    <string name="soyisim">Soyisim</string>
    <string name="sifree">Şifre</string>
    <string name="sifre_tekrar">Şifre Tekrar</string>
    <string name="kayitol">KAYIT OL</string>
    <string name="giris_ya">Giriş Yap</string>
    <string name="email">Email</string>
    <string name="ifre">Şifre</string>
    <string name="girisss_yap">Giriş Yap</string>
    <string name="kay_t_ol">Kayıt Ol</string>
    <string name="resim_ekle">Resim Ekle</string>
    <string name="kay_t_oll">Kayıt Ol</string>
    <string name="sim">İsim</string>
    <string name="ifreyi_do_rula">Şifreyi Doğrula</string>
    <string name="kaydol">Kayıt Ol</string>
    <string name="hesab_m_var">Hesabım Var</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">type a message</string>
</resources>